# vio_initialization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy_droid_vo.sh  process_data.sh  process_euroc_data.sh
analysis/: imu_init_analysis.ipynb
data/MH_01_easy/: DroidKeyFrameTrajectoryMono.txt
data/MH_03_medium/: DroidKeyFrameTrajectoryMono.txt  DroidKeyFrameTrajectoryStereo.txt
data/MH_05_difficult/: readme.txt
data/V2_02_medium/: DroidKeyFrameTrajectoryMono.txt
data/euroc.bak/MH_05_difficult/: DroidKeyFrameTrajectoryMono.txt  DroidKeyFrameTrajectoryStereo.txt
data/euroc.bak/V1_03_difficult/: DroidKeyFrameTrajectoryStereo.txt
data/euroc.bak/V2_01_easy/: DroidKeyFrameTrajectoryStereo.txt
data/euroc/MH_01_easy/: gt.tum
data/euroc/MH_02_easy/: DroidKeyFrameTrajectoryMono.txt  DroidKeyFrameTrajectoryStereo.txt  T_wc_nip_s_lba.txt
data/euroc/MH_04_difficult/: DroidKeyFrameTrajectoryMono.txt  DroidKeyFrameTrajectoryStereo.txt
data/euroc/V1_01_easy/: DroidKeyFrameTrajectoryMono.txt  DroidKeyFrameTrajectoryStereo.txt
data/euroc/V1_02_medium/: DroidKeyFrameTrajectoryStereo.txt
data/euroc/V2_01_easy/: DroidKeyFrameTrajectoryMono.txt
data/euroc/V2_02_medium/: DroidKeyFrameTrajectoryStereo.txt
data/euroc/V2_03_difficult/: DroidKeyFrameTrajectoryMono.txt
exp1_results/: MH_01_easy_10_iterative.csv  MH_01_easy_10_iterative_noprior.csv  MH_01_easy_10_mqh.csv  MH_01_easy_10_ours.csv  MH_01_easy_10_ours_noprior.csv  MH_01_easy_20_iterative.csv  MH_01_easy_20_iterative_noprior.csv  MH_01_easy_20_mqh.csv  MH_01_easy_20_ours.csv  MH_01_easy_20_ours_noprior.csv  MH_01_easy_50_iterative.csv  MH_01_easy_50_iterative_noprior.csv  MH_01_easy_50_mqh.csv  MH_01_easy_50_ours.csv  MH_01_easy_50_ours_noprior.csv  MH_01_easy_5_iterative.csv  MH_01_easy_5_iterative_noprior.csv  MH_01_easy_5_mqh.csv  MH_01_easy_5_ours.csv  MH_01_easy_5_ours_noprior.csv  MH_01_easy_75_iterative.csv  MH_01_easy_75_iterative_noprior.csv  MH_01_easy_75_mqh.csv  MH_01_easy_75_ours.csv  MH_01_easy_75_ours_noprior.csv  iterative_10.csv  iterative_20.csv  iterative_5.csv  iterative_50.csv  iterative_75.csv  iterative_wo_prior_10.csv  iterative_wo_prior_20.csv  iterative_wo_prior_5.csv  iterative_wo_prior_50.csv  iterative_wo_prior_75.csv  mqh_10.csv  mqh_20.csv  mqh_5.csv  mqh_50.csv  mqh_75.csv  (+10 more)
exp2_results/: MH_01_easy_iterative.csv  MH_01_easy_iterative_noprior.csv  MH_01_easy_mqh.csv  MH_01_easy_ours.csv  MH_01_easy_ours_noprior.csv  iterative_cam10.csv  iterative_wo_prior_cam10.csv  mqh_camera10.csv  proposed_cam10.csv  proposed_wo_prior_cam10.csv
exp2_results/MH_01_easy/mono/: DroidKeyFrameTrajectoryMono_iterative_wo_prior_cam5.csv  DroidKeyFrameTrajectoryMono_mqh_camera5.csv  DroidKeyFrameTrajectoryMono_proposed_cam5.csv  DroidKeyFrameTrajectoryMono_proposed_wo_prior_cam5.csv  MH_01_easy_iterative.csv  MH_01_easy_iterative_noprior.csv  (+3 more)
include/: data_utilities.h  imu_initialization.h  simulation.h
src/: imu_initialization.cpp  simulation.cpp
tests/: CMakeLists.txt  test_data_utilities.cpp  test_io.cpp  test_simulation.cpp
(+1061 files in other folders)
